# reactos

./: CMakeLists.txt  groups  project.config  toolchain-msvc.cmake
.github/workflows/: build.yml
base/applications/network/ftp/: CMakeLists.txt
base/services/rpcss/: CMakeLists.txt
boot/bootdata/: txtsetup.sif
dll/win32/kernel32/: CMakeLists.txt
dll/win32/kernel32/client/: proc.c
dll/win32/msafd/misc/: dllmain.c
dll/win32/msvcrt/: CMakeLists.txt
dll/win32/secur32/: CMakeLists.txt
dll/win32/setupapi/: CMakeLists.txt
drivers/hid/hidclass/: fdo.c  precomp.h
drivers/hid/hidparse/: CMakeLists.txt
drivers/ksfilter/ks/: swenum.c
drivers/network/afd/afd/: info.c
drivers/network/tcpip/tcpip/: main.c
drivers/usb/usbccgp/: fdo.c  function.c  misc.c  pdo.c  usbccgp.h
drivers/usb/usbhub_new/: ioctl.c
drivers/usb/usbport/: debug.c  device.c  endpoint.c  iface.c  ioctl.c  iso.c  pnp.c  power.c  queue.c  trfsplit.c  urb.c  usb2.c  usbport.c  usbport.h
drivers/wdm/audio/hdaudbus/: fdo.cpp
hal/halx86/acpi/: halacpi.c
hal/halx86/generic/: bios.c
modules/rostests/apitests/afd/: AfdHelpers.c  AfdHelpers.h  CMakeLists.txt  info.c  testlist.c
modules/rostests/apitests/ws2_32/: CMakeLists.txt  getsockopt.c  recv.c  testlist.c
modules/rostests/kmtests/kmtest/: kmtest.c
modules/rostests/tests/: CMakeLists.txt
modules/rostests/tests/pentium_bug/: CMakeLists.txt  pentium_bug.c
modules/rostests/winetests/msvcrt/: CMakeLists.txt
ntoskrnl/: ntos.cmake  ntoskrnl_i386.lds
ntoskrnl/config/: cmvalche.c
ntoskrnl/ex/: init.c
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/include/internal/: io.h  ke.h  ke_x.h  mm.h
ntoskrnl/include/internal/i386/: ke.h
ntoskrnl/io/iomgr/: irp.c  volume.c
ntoskrnl/io/pnpmgr/: devnode.c  pnpmgr.c  pnproot.c
ntoskrnl/kdbg/: kdb.c
ntoskrnl/ke/: bug.c
ntoskrnl/ke/i386/: cpu.S  cpu.c  kiinit.c  traphdlr.c
ntoskrnl/mm/ARM3/: pfnlist.c  pool.c  special.c  zeropage.c
ntoskrnl/po/: poshtdwn.c  power.c
ntoskrnl/wmi/: wmi.c
reactos/drivers/hid/hidclass/: hidclass.c  pdo.c
reactos/drivers/hid/hidusb/: hidusb.c
reactos/drivers/hid/mouhid/: mouhid.c
reactos/drivers/usb/: CMakeLists.txt  usbmport.h
reactos/drivers/usb/usbccgp/: pdo.c
reactos/drivers/usb/usbehci/: hardware.h  (+5 more)
sdk/cmake/: CMakeMacros.cmake  config.cmake  gcc.cmake
sdk/include/psdk/: usb.h
sdk/include/reactos/: debug.h
sdk/include/xdk/: rtlfuncs.h  winnt_old.h
sdk/lib/crt/: crt.cmake  oldnames.cmake
win32ss/user/user32/: CMakeLists.txt
(+39 files in other folders)
